kubernetes/system/cilium/base/gateways/gateways.yaml
---
# To test this gateway modify the /etc/hosts and set the *.ninebasetwo.net to the LB IP of the external-gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: ninebasetwo.net
spec:
  gatewayClassName: cilium
  listeners:
  - name: external-gateway-https
    port: 443
    protocol: HTTPS
    hostname: "*.ninebasetwo.net"
    allowedRoutes:
      namespaces:
        from: All
    tls: 
      mode: Terminate 
      certificateRefs:
        - name: gateway-tls 
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: internal-gateway-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
